--- a/css/styles.css
+++ b/css/styles.css
@@ -527,6 +527,27 @@ fill: var(--active-color);}
 .pictures .pictures-img:not(:last-child){
     margin-right: 30px;
 }
+.pictures-img{
+    position: relative;
+}
+.pictures-text{
+   position: absolute;
+   text-align: center;
+    font-weight: 700;
+    font-style: bold;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    justify-content: center;
+    width: 370px;
+    padding-top: 27px;
+    padding-bottom: 27px;
+   bottom: 0px;
+    
+    color: #fff;
+    background-color: rgba(47, 48, 58, 0.8);
+
+}
 /* ---------------------our team------------------- */
 .section.team{
     background-color:var(--team-bg);
@@ -725,6 +746,18 @@ margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
 }
+.profile-hover{
+    position: absolute;
+    font-size: 18px;
+    width: 370px;
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    text-align: left;
+   padding-left: 24px;
+   padding-right: 24px;
+    
+}
+
 .title-text{
     
     padding: 20px 24px;
@@ -743,10 +776,14 @@ margin-bottom: 50px;
 .profile-box{
     display: block;
     background-color: var(--section-team-bg);
-    /* width: 370px; */
     margin-right: 30px;
     margin-bottom: 30px;
     
+}
+.profile-card::before{
+    width: 370px;
+    height: 294px;
+    background-color: rgba(33, 150, 243, 0.9);
 }
 .profile-box-title{
     font-weight: 700;
