--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-/* html {
-    box-sizing: border-box;
-} */
+
 
 *,
 *::before,
@@ -237,9 +235,19 @@ padding-bottom: 25px; */
 
 /* --------------------------header main navigation -----------------*/
 .header{
+    /* position: relative; */
     border-bottom: 1px solid #ECECEC;
 }
+/* .link-line{
+    position: absolute;
+    width: 48px;
+    height: 4px;
+    left: 453px;
+    top: 76px;
 
+    background: #2196F3;
+    border-radius: 2px;
+} */
 
 .header .container{
     display: flex;
@@ -362,10 +370,10 @@ fill: var(--active-color);}
     
     
 }
-/* .link{ */
-    display: flex;
-}
-/* .link.mail::before{ */
+/* .link{
+    display: flex; */
+/* } */
+.link.mail::before{
     
     content: "";
     display: inline-block;
@@ -461,7 +469,7 @@ fill: var(--active-color);}
 
 }
 .container-goals{
-    display: flex;
+    /* display: flex; */
     content: "";
 
     width: 270px;
@@ -740,6 +748,17 @@ margin-bottom: 50px;
     background: var(--active-color);
     color: var(--active-color-letters);
 }
+.modal{
+    width: 528px;
+    min-height: 581px;
+    /* position: absolute; */
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 /* ------------------portfolio content--------------------------------- */
 .profile.list{
     /* margin: 0; */
@@ -749,13 +768,35 @@ margin-bottom: 50px;
 .profile-hover{
     position: absolute;
     font-size: 18px;
+    color:var(--active-color-letters);
     width: 370px;
     font-size: 18px;
     letter-spacing: 0.03em;
     text-align: left;
-   padding-left: 24px;
-   padding-right: 24px;
-    
+    transform: translate(-50%, -50%);
+   padding: 63px 24px;
+   /* padding-right: 24px; */
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+  
+}
+.card-fone{
+    position: relative; 
+}
+.card-fone::before{
+    display: inline-block;
+    position: absolute;
+    content: "";
+     
+   width: 100%;
+   height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+}
+.profile-box:hover .card-fone::before,
+.profile-box:hover .profile-hover{
+    opacity: 1;
 }
 
 .title-text{
@@ -774,6 +815,7 @@ margin-bottom: 50px;
     margin-bottom: 0;
 }
 .profile-box{
+    
     display: block;
     background-color: var(--section-team-bg);
     margin-right: 30px;
