--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,9 @@ padding-bottom: 25px; */
 
 
 /*-------------------------- footer styles ---------------------*/
-
+.footer-space .container{
+    display: flex;
+}
 .footer-space {
     background-color: var(--footer-bg-color);
     padding-bottom: 60px;
@@ -224,8 +226,10 @@ padding-bottom: 25px; */
     align-items: baseline;
 }
 
-.footer-soc-link:hover{
+.footer-soc-link:hover,
+.footer-soc-link:focus{
     background-color: var(--active-color) ;
+    
 }
 .address-links {
     display: inline-block;
@@ -270,7 +274,7 @@ margin-right: 50px;
     width: 16px;
     height: 12px;
     margin-right: 10px;
-    color: #757575;
+    fill: #757575;
     }
 .tel-icon{
 width: 10PX;
@@ -306,24 +310,25 @@ fill: #757575;
    
 .site-nav .link:hover,
 .site-nav .link:focus,
-.site-nav .link.current {
+.site-nav .link.current ,
+.site-nav .link.current.link::after{
     color: var(--active-color);
+    opacity: 1;
     }
     .contacts .link:hover,
     .contacts .link:focus {
         color: var(--active-color);
     }
 
-.mail:hover .mail-icon {
-fill: var(--active-color);}
+.mail:hover .mail-icon,
+.mail:focus .mail-icon{
+fill: var(--active-color);
+}
 
-.tel:hover .tel-icon {
+.tel:hover .tel-icon,
+.tel:focus .tel-icon {
     fill: var(--active-color);
 }
-    /* .mail-icon:hover,
-    .mail-icon:focus{
-        fill: var(--active-color);
-    } */
 .contacts .link{ 
     color: var(--contacts-link-color);
     font-family:inherit;
@@ -341,16 +346,6 @@ fill: var(--active-color);}
 
     
 }
-/* .link.mail:hover,
-.link.mail:focus
-{
-    fill: currentColor;
-} */
-
-/* .contacts .link:hover,
-.contacts .link:focus {
-    color: var(--active-color);
-} */
 
 .contacts{
     margin-left: auto;
@@ -362,33 +357,21 @@ fill: var(--active-color);}
     
     
 }
-/* .link{ */
-    display: flex;
+.site-nav .link{
+    position: relative;
+    display: inline-block;
 }
-/* .link.mail::before{ */
-    
+.site-nav .link::after{
     content: "";
-    display: inline-block;
-    width: 16px;;
-    height: 12px;
-    /* background-color: red; */
-    /* background-image: url(../images/mail.svg); */
-    background-size: contain;
-    margin-right: 10px;
-    fill: currentColor;
-    
-  
-}
-
-.link.tel::before{
-    display: inline-block;
-    /* content: "";
-    margin-right: 10px;
-    width: 10px;
-    height: 16px;
-    background-size: contain;
-    justify-content: center;
-    background-image: url(../images/phone.svg); */
+    position: absolute;
+    background: #2196F3;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    left: 50%;
+    bottom: -1px;
+    transform: translateX(-50%);
+    opacity: 0;
 }
 
  /*--------------------------------hero sections ------------------ */
@@ -458,31 +441,36 @@ fill: var(--active-color);}
 
 .text.list{
     display: flex;
+    
 
 }
 .container-goals{
     display: flex;
-    content: "";
-
+  
+    justify-content: center;
+   align-items: center;
     width: 270px;
     height: 120px;
+    border-radius: 4px;
     background-color: #F5F4FA;
-    margin-bottom: 30px;
-    padding: 25px 100px;
+   
+    
+    
 }
+
 
 .text-content{
     
     max-width: 270px;
-       /* outline: solid 1px black; */
     
-    /* background-color:#F5F4FA ; */
    
 }
-.container-goals:not(:last-child){
+.goals-card:not(:last-child){
     margin-right: 30px;
 }
-
+.goals-text{
+    padding-top: 30px;
+}
 
 .text-caption{
     color: var(--title-color);
@@ -507,32 +495,36 @@ fill: var(--active-color);}
 }
 
 /* ---------------what we are doing----------------- */
-.work-text{
+.work-text {
     /* display: inline-block; */
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    
+
     color: var(--title-color);
 
     margin-bottom: 50px;
 }
-.pictures{
+
+.pictures {
     display: flex;
     padding-bottom: 94px;
-    
+
 }
-.pictures .pictures-img:not(:last-child){
+
+.pictures .pictures-img:not(:last-child) {
     margin-right: 30px;
 }
-.pictures-img{
+
+.pictures-img {
     position: relative;
 }
-.pictures-text{
-   position: absolute;
-   text-align: center;
+
+.pictures-text {
+    position: absolute;
+    text-align: center;
     font-weight: 700;
     font-style: bold;
     font-size: 14px;
@@ -542,16 +534,117 @@ fill: var(--active-color);}
     width: 370px;
     padding-top: 27px;
     padding-bottom: 27px;
-   bottom: 0px;
-    
+    bottom: 0px;
+
     color: #fff;
     background-color: rgba(47, 48, 58, 0.8);
 
 }
+
+/* ---------------------our team------------------- */
+.section.team {
+    background-color: var(--team-bg);
+
+}
+
+.our-team-pic {
+    display: flex;
+    margin-top: 50px;
+
+}
+
+.our-team-pic .box:not(:last-child) {
+    margin-right: 30px;
+}
+
+.section-team .box {
+    background-color: var(--section-team-bg);
+}
+
+.team-heading {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--title-color);
+}
+
+.team-names {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--team-name-color);
+
+    margin-bottom: var(--mb-text);
+
+}
+
+.box {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: #fff;
+}
+
+.box-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+}
+
+.team-prof {
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 16px;
+
+}
+
+.team-net {
+    fill: #AFB1B8;
+}
+
+.team-net-links {
+    display: flex;
+    justify-content: center;
+}
+
+.team-links {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    border-radius: 50%;
+    /* background-color: yellow; */
+    justify-content: center;
+    align-items: center;
+}
+
+.team-links:hover,
+.team-links:focus {
+    background-color: #2196F3;
+
+}
+
+.team-link-items:hover .team-net,
+.team-link-items:focus .team-net {
+    fill: #fff;
+
+}
+
+.team-link-items+.team-link-items {
+    margin-left: 10px;
+}
 /* ---------------------our team------------------- */
 .section.team{
     background-color:var(--team-bg);
-    
+    padding-bottom: 94px;
 }
 
 .our-team-pic{
@@ -592,6 +685,7 @@ fill: var(--active-color);}
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
+    
 }
 .box-text{
     padding-top: 30px;
@@ -627,8 +721,8 @@ fill: var(--active-color);}
 background-color: #2196F3;
 
 }
- .team-link-items:hover .team-net,
- .team-link-items:focus .team-net{
+ .team-links:hover .team-net,
+ .team-links:focus .team-net{
 fill: #fff;
     
 }
@@ -637,7 +731,7 @@ fill: #fff;
     margin-left: 10px;
 }
 /* ---------------------------our clients------------------------- */
-.clients{
+.clients-text{
     padding-top: 94px;
     padding-bottom: 94px;
 }
@@ -647,6 +741,8 @@ justify-content: center;
 align-items: center;
 }
 .clients-net{
+    width: 106px;
+    height: 60px;
     fill: #AFB1B8;
 }      
 
@@ -675,40 +771,92 @@ align-items: center;
     width: 170px;
     height: 92px;
 }
-.client-button:hover,
-.client-button:focus{
+.clients-a .client-button:hover
+
+{
     border-color:#2196F3;
     cursor: pointer;
-    fill: currentColor;
+
+}
+.client-button:hover .clients-net {
+    fill: #2196F3;
+
+}
+
+.clients-a:focus .client-button{
+border-color:#2196F3;
+
+}
+
+.clients-a:focus .clients-net{
+    border-color:#2196F3;
     fill: #2196F3;
 }
-.client-button:hover .clients-net{
-    fill: #2196F3;
+
+ .clients-a .clients-button:focus .clients-net{
+     fill: red;
+ }
+
+ /* -------------------------Modal window------------- */
+.backdrop{
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    align-items: center;
+    justify-content: center;
+    transition: opacity 600ms, visibility 600ms;
 }
-
-
-
+.modal{
+    position: relative;
+    width: 528px;
+    min-height:  581px;
+    background-color: #fff;
+    border-radius: 4px;
+    
+}
+.modal-close-bt{
+    display: flex;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: Solid rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    top: 8px;
+    right: 8px;
+}
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
 
 /*------------------------- Portfolio page ------------*/
 
-.section{
+.section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
 
-.list-button{
-   
-margin-bottom: 50px;
-   
+.list-button {
+
+    margin-bottom: 50px;
+
 }
-.list.list-button{
-    
+
+.list.list-button {
+
     display: flex;
     justify-content: center;
 }
 
-.button-portfolio{
-   display: block;
+.button-portfolio {
+    display: block;
     background-color: var(--portfolio-bt-bg);
     font-family: inherit;
     font-weight: 500;
@@ -727,39 +875,74 @@ margin-bottom: 50px;
 
 
 }
-.button-item:not(:last-child){
+
+.button-item:not(:last-child) {
     padding-right: 8px;
 }
+
 .button-portfolio:hover,
-.button-portfolio:focus{
-      
+.button-portfolio:focus {
+
     color: var(--active-color-letters);
     background-color: var(--active-color);
 }
-.button-portfolio.current{
+
+.button-portfolio.current {
     background: var(--active-color);
     color: var(--active-color-letters);
 }
+
 /* ------------------portfolio content--------------------------------- */
-.profile.list{
+.profile.list {
     /* margin: 0; */
     display: flex;
     flex-wrap: wrap;
 }
-.profile-hover{
+
+.profile-hover {
     position: absolute;
     font-size: 18px;
+    color: var(--active-color-letters);
     width: 370px;
     font-size: 18px;
     letter-spacing: 0.03em;
     text-align: left;
-   padding-left: 24px;
-   padding-right: 24px;
-    
+    transform: translate(-50%, -50%);
+    padding: 63px 24px;
+    /* padding-right: 24px; */
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+
 }
 
-.title-text{
-    
+.card-fone {
+    position: relative;
+}
+
+.card-fone::before {
+    display: inline-block;
+    position: absolute;
+    content: "";
+
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+}
+
+.profile-box:hover .card-fone::before,
+.profile-box:hover .profile-hover {
+    opacity: 1;
+}
+
+.profile-card:focus .card-fone::before,
+.profile-card:focus .profile-hover {
+    opacity: 1;
+}
+
+.title-text {
+
     padding: 20px 24px;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
@@ -773,19 +956,23 @@ margin-bottom: 50px;
 .profile .profile-box:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
-.profile-box{
+
+.profile-box {
+
     display: block;
     background-color: var(--section-team-bg);
     margin-right: 30px;
     margin-bottom: 30px;
-    
+
 }
-.profile-card::before{
+
+.profile-card::before {
     width: 370px;
     height: 294px;
     background-color: rgba(33, 150, 243, 0.9);
 }
-.profile-box-title{
+
+.profile-box-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -793,22 +980,25 @@ margin-bottom: 50px;
     color: var(--title-color);
 
     margin-bottom: 4px;
-    
+
 }
-.profile-box-text{
+
+.profile-box-text {
     font-size: 16px;
     line-height: 1.88;
     color: var(--contacts-link-color);
-  
+
     letter-spacing: 0.03em;
 }
-.profile-card{
+
+.profile-card {
     display: block;
     text-decoration: none;
 }
-.profile-card:hover{
-box-shadow: 1px
-4px 6px rgba(0, 0, 0, 0.16),
-0px 4px 4px rgba(0, 0, 0, 0.06),
-0px 1px 1px rgba(0, 0, 0, 0.12);
+
+.profile-card:hover,
+.profile-card:focus {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        0px 1px 1px rgba(0, 0, 0, 0.12);
 }
