--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,8 @@ padding-bottom: 25px; */
 .address-link:focus {
     color: var(--active-color);
     text-decoration: none;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link-word{
     color: #FFFFFF;
@@ -229,6 +231,8 @@ padding-bottom: 25px; */
 .footer-soc-link:hover,
 .footer-soc-link:focus{
     background-color: var(--active-color) ;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .address-links {
@@ -314,20 +318,28 @@ fill: #757575;
 .site-nav .link.current.link::after{
     color: var(--active-color);
     opacity: 1;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
     }
     .contacts .link:hover,
     .contacts .link:focus {
         color: var(--active-color);
+        transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .mail:hover .mail-icon,
 .mail:focus .mail-icon{
 fill: var(--active-color);
+transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tel:hover .tel-icon,
 .tel:focus .tel-icon {
     fill: var(--active-color);
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts .link{ 
     color: var(--contacts-link-color);
@@ -435,6 +447,8 @@ fill: var(--active-color);
 .hero-button:hover,
 .hero-button:focus{
     background-color: var(--hero-button-bg);
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* -------------------our goals text------------ */
@@ -491,7 +505,8 @@ fill: var(--active-color);
 }
 .title-text:hover{
     fill: #188CE8;
-    
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------------what we are doing----------------- */
@@ -629,12 +644,16 @@ fill: var(--active-color);
 .team-links:hover,
 .team-links:focus {
     background-color: #2196F3;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .team-link-items:hover .team-net,
 .team-link-items:focus .team-net {
     fill: #fff;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -719,11 +738,15 @@ fill: var(--active-color);
 .team-links:hover,
 .team-links:focus{
 background-color: #2196F3;
+transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 
 }
  .team-links:hover .team-net,
  .team-links:focus .team-net{
 fill: #fff;
+transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -776,10 +799,13 @@ align-items: center;
 {
     border-color:#2196F3;
     cursor: pointer;
-
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-button:hover .clients-net {
     fill: #2196F3;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -885,6 +911,8 @@ border-color:#2196F3;
 
     color: var(--active-color-letters);
     background-color: var(--active-color);
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-portfolio.current {
@@ -909,18 +937,16 @@ border-color:#2196F3;
     text-align: left;
     transform: translate(-50%, -50%);
     padding: 63px 24px;
-    /* padding-right: 24px; */
     top: 50%;
     left: 50%;
-    opacity: 0;
-
 }
 
 .card-fone {
     position: relative;
+    overflow: hidden;
 }
 
-.card-fone::before {
+.card-overlay {
     display: inline-block;
     position: absolute;
     content: "";
@@ -928,18 +954,22 @@ border-color:#2196F3;
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    opacity: 0;
+    transform: translateY(0%);
+    
 }
 
-.profile-box:hover .card-fone::before,
-.profile-box:hover .profile-hover {
+
+
+.profile-box:hover .card-overlay,
+.profile-card:focus .card-overlay {
+    transform: translateY(-100%);
     opacity: 1;
+    height: 100%;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.profile-card:focus .card-fone::before,
-.profile-card:focus .profile-hover {
-    opacity: 1;
-}
+
 
 .title-text {
 
@@ -1001,4 +1031,6 @@ border-color:#2196F3;
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         0px 1px 1px rgba(0, 0, 0, 0.12);
+        transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
